[package]
name = "the-maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3" }
rs-snowflake = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
